--- a/src/style.css
+++ b/src/style.css
@@ -5970,10 +5970,6 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-400;
-600;
-700&display=swap);
-
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -32278,7 +32274,8 @@ button.section-slack:hover {
         right: 0;
         z-index: 1050;
         overflow-y: auto;
-        height: calc(100vh - 30px) !important;
+        height:fit-content;
+        /*height: calc(100vh - 30px) !important;*/
         opacity: 0
     }
 
@@ -44704,18 +44701,6 @@ pre.paddle-popup-pre {
     display: block;
 }
 
-.paddle-popup::after {
-    display: none;
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: white url() no-repeat center center;
-    background-size: 4rem;
-    opacity: 0.8;
-}
 
 .overflow-hidden {
     overflow: hidden !important;
